# tinySLAM

./: CMakeLists.txt  make.sh
src/: CoreSLAM.h  test_loop_closing.c
test/: test_lab_reverse.c
